# ParallelOrdinaryKriging

./: .gitignore  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  ComputePlatform.cpp  ComputePlatform.h  DistancesMatrixOperation.cpp  DistancesMatrixOperation.h  FillBufferOperation.cpp  FillBufferOperation.h  KrigingCommon.cpp  KrigingCommon.h  KrigingOperation.cpp  KrigingOperation.h  KrigingSerial.cpp  KrigingSerial.h  LinearAlgebraOperation.cpp  LinearAlgebraOperation.h  Point.cpp  Point.h  README.md  ReductionOperation.cpp  ReductionOperation.h  Tests.cpp  Timer.cpp  Timer.h  XYZFile.cpp  XYZFile.h  kriging_test.R  main.cpp
CL/: cl.hpp
Tests/: Tests.vcxproj  Tests.vcxproj.filters
kernels/: Buffers.cl  DistancesMatrix.cl  Kriging.cl  LinearAlgebra.cl  Reduction.cl
